<resources>
    <string name="app_name">ShopStock</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="e_mail">Email</string>
    <string name="tag_login">Login and start finding products \n you need in your community</string>
    <string name="tag_register">Register so we can help you get the products \n you need in your community </string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_searchable">Search</string>
</resources>
